--- a/Korn.Utils.Assembler/Korn.Utils.Assembler.csproj
+++ b/Korn.Utils.Assembler/Korn.Utils.Assembler.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Korn.Core\Korn.Core\Korn.Core.csproj" />
     <ProjectReference Include="..\..\Korn.Utils.Memory\Korn.Utils.Memory\Korn.Utils.Memory.csproj" />
   </ItemGroup>
 
