Project has been renamed from Korn.Utils.Assembler to Korn.Modules.Assembler

--- a/Console/Console.csproj
+++ b/Console/Console.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Korn.Utils.Assembler\Korn.Utils.Assembler.csproj" />
+    <ProjectReference Include="..\Korn.Modules.Assembler\Korn.Modules.Assembler.csproj" />
   </ItemGroup>
 
 </Project>
